--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "msgpack",
+  "name": "msgpack-0.4",
 	"description": "A space-efficient object serialization library for node.js",
-  "version": "0.1.3",
+  "version": "0.1.4",
 	"homepage": "https://github.com/pgriess/node-msgpack",
 	"author": "Peter Griess <pg@std.in>",
 	"contributors": [
@@ -16,7 +16,7 @@
     "lib": "lib"
   },
   "engines": {
-    "node": ">=0.1.97"
+    "node": "0.4.x"
   },
 	"scripts": {
 		"preinstall": "make",
